<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="in.sunfox.needs.assesment.dashboard.DashboardViewModel" />

        <variable
            name="beneficiaryTask"
            type="in.sunfox.needs.assesment.dashboard.tasks.Task.BeneficiaryTask" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_rounded_strokes_grey">

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/beneficiary_name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@{beneficiaryTask.beneficiaryName}"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/textView54"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/address"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView55"
            app:layout_constraintTop_toBottomOf="@+id/textView55" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@{beneficiaryTask.beneficiaryAddress}"
            android:textColor="#333"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/textView56"
            app:layout_constraintTop_toBottomOf="@+id/textView56"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView58"
            style="@style/TextViewItemWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pending"
            android:visibility="@{beneficiaryTask.taskCompleted?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            style="@style/CardRoundedBottomBlueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.dispatchDoTask(beneficiaryTask.beneficiaryPhone)}"
            android:text="@string/attempt"
            android:visibility="@{beneficiaryTask.taskCompleted?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:visibility="gone"
            style="@style/TextViewItemSuccess"
            android:id="@+id/textView60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/completed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="@{beneficiaryTask.taskCompleted?View.VISIBLE:View.GONE}"
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextViewItemSuccess"
            android:text="@string/completed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>