<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="in.sunfox.needs.assesment.authentication.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.PhoneNumberVerifiedFragment">

        <Button
            android:onClick="@{()->viewModel.openVolunteerRegistration()}"
            style="@style/BottomBlueButton"
            android:id="@+id/fragment_phone_number_verified_btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/congratulations_your_phone_number_has_been_verified"
            android:textColor="#666"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_phone_number_verified_btn_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/img_success"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView27"
            android:contentDescription="@string/verified" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/verified"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>